# terminal_table

./: .coverage  .coveragerc  .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.pytest_cache/v/cache/: lastfailed  nodeids
terminal_table/: __init__.py  terminal_table.py
test/: test_output.py
